--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Event Organizer Website Design </title>
+    <title>Welcome to Event-Sphere</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
-    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<body style="background-color: #121212;">
     
-<!-- header section starts  -->
-
 <header class="header">
 
-    <a href="#" class="logo"><span>e</span>vento</a>
+    <a href="#" class="logo"><span>E</span>sphere</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -37,9 +33,6 @@
 
 </header>
 
-<!-- header section ends -->
-
-<!-- home section starts  -->
 
 <section class="home" id="home">
 
@@ -48,7 +41,7 @@
         <a href="#" class="btn">contact us</a>
     </div>
 
-    <div class="swiper-container home-slider">
+     <div class="swiper-container home-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="images/slide-1.jpg" alt=""></div>
             <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
@@ -61,9 +54,6 @@
 
 </section>
 
-<!-- home section ends -->
-
-<!-- service section starts  -->
 
 <section class="service" id="service">
 
@@ -111,9 +101,6 @@
 
 </section>
 
-<!-- service section ends -->
-
-<!-- about section starts  -->
 
 <section class="about" id="about">
 
@@ -136,9 +123,7 @@
 
 </section>
 
-<!-- about section ends -->
 
-<!-- gallery section starts  -->
 
 <section class="gallery" id="gallery">
 
@@ -240,9 +225,6 @@
 
 </section>
 
-<!-- gallery section ends -->
-
-<!-- price section starts  -->
 
 <section class="price" id="price">
 
@@ -307,9 +289,6 @@
 
 </section>
 
-<!-- price section ends -->
-
-<!-- review section starts  -->
 
 <section class="reivew" id="review"> 
     
@@ -324,7 +303,7 @@
                 <div class="user">
                     <img src="images/pic-1.png" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Chris Evan</h3>
                         <span>happy clients</span>
                     </div>
                 </div>
@@ -336,7 +315,7 @@
                 <div class="user">
                     <img src="images/pic-2.png" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Emilia clarke</h3>
                         <span>happy clients</span>
                     </div>
                 </div>
@@ -346,9 +325,9 @@
             <div class="swiper-slide box">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-3.png" alt="">
+                    <img src="images/image-193x190.jpg" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Tony Stark</h3>
                         <span>happy clients</span>
                     </div>
                 </div>
@@ -360,7 +339,7 @@
                 <div class="user">
                     <img src="images/pic-4.png" alt="">
                     <div class="user-info">
-                        <h3>john deo</h3>
+                        <h3>Gwen Tenysen</h3>
                         <span>happy clients</span>
                     </div>
                 </div>
@@ -373,9 +352,6 @@
 
 </section>
 
-<!-- review section ends -->
-
-<!-- contact section starts  -->
 
 <section class="contact" id="contact">
 
@@ -396,9 +372,6 @@
 
 </section>
 
-<!-- contact section ends -->
-
-<!-- footer section starts  -->
 
 <section class="footer">
 
@@ -406,11 +379,11 @@
 
         <div class="box">
             <h3>branches</h3>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> jogeshwari </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> goregaon </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> navi mumbai </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> andheri </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Chandigarh </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Mohali </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Kharar </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Punchkula </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Zirakpur </a>
         </div>
 
         <div class="box">
@@ -420,25 +393,25 @@
             <a href="#"> <i class="fas fa-arrow-right"></i> about </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> gallery </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> price </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> reivew </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> contact </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> review </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> contact me</a>
         </div>
 
         <div class="box">
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-            <a href="#"> <i class="fas fa-envelope"></i> anasshaikh@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +111-222 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> kantrishi047@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> quantumworld047@gmail.com </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Kharar, (Punjab), india - 140301 </a>
         </div>
 
         <div class="box">
             <h3>follow us</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+            <a href="https://www.facebook.com/profile.php?id=100008805972759&mibextid=ZbWKwL" target=”_blank” > <i class="fab fa-facebook-f"></i> facebook </a>
+            <a href="#" target=”_blank” > <i class="fab fa-twitter"></i> twitter </a>
+            <a href="https://www.instagram.com/rishi_.kant_07?igsh=MXh2dzRleXM1emZkag==" target=”_blank” > <i class="fab fa-instagram"></i> instagram </a>
+            <a href="https://www.linkedin.com/in/rishikant-singh-68509b315/" target=”_blank” > <i class="fab fa-linkedin"></i> linkedin </a>
         </div>
 
     </div>
@@ -446,9 +419,6 @@
   
 </section>
 
-<!-- footer section ends -->
-
-<!-- theme toggler  -->
 
 <div class="theme-toggler">
 
@@ -469,30 +439,8 @@
 
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="js/script.js"></script>  
 
 </body>
 </html>
